--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -39,7 +39,7 @@
   </div>
 </div>
 <p class="au-flex au-pt-4 group-buttons">
-  <a href="portfolio.html" class="au-mt-4 arrow-button arrow-button--right arrow-button--out">View Our Portfolio
+  <a href="#0" class="au-mt-4 arrow-button arrow-button--right arrow-button--out">View Our Portfolio
     <span class="arrow-cont">
       <svg>
         <use xlink:href="assets/img/symbols.svg#arrow"></use>
